--- a/Classification Primer/Classification Primer.ipynb
+++ b/Classification Primer/Classification Primer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -10,13 +10,13 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "data = pd.read_csv(\"C:/Users/ewojnow/pythonic-iconic/Classification Primer/amazon_baby.csv\")\n",
+    "data = pd.read_csv(\"amazon_baby.csv\")\n",
     "#pd.options.display.max_rows=10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "[183531 rows x 3 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,8 +158,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def remove_punctuation(text):\n",
@@ -169,8 +171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data['review'] = data['review'].fillna('')\n",
@@ -179,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +216,7 @@
        "Name: sentiment, Length: 166752, dtype: int64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,20 +228,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "133304"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "#3) Split into training and test sets\n",
     "#vtrain_data,test_data = data.random_split(.8, seed=0)\n",
@@ -249,8 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#4) Build the word count vector for each review\n",
@@ -262,8 +259,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#5) Train a sentiment classifier with logistic regression\n",
@@ -274,39 +273,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " -1.39126733e+00   9.44427355e-05   4.94660055e-04 ...,   1.48775646e-02\n",
-      "   9.84454440e-03  -2.78307183e-05\n",
-      "['-1.39126733e+00', '9.44427355e-05', '4.94660055e-04', '...,', '1.48775646e-02', '9.84454440e-03', '-2.78307183e-05']\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-200-ea51fce99dac>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[0mcounter\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: "
+      "85472\n"
      ]
     }
    ],
    "source": [
     "counter = 0\n",
-    "f = str(sentiment_model.coef_.toarray()[0]).replace(\"[\", \"\")\n",
-    "f = f.replace(\"]\", \"\")\n",
-    "print(f)\n",
-    "print(f.split())\n",
-    "for x in f:\n",
-    "    print(float(x))\n",
-    "counter"
+    "arrSize = sentiment_model.coef_.size\n",
+    "for i in range(arrSize):\n",
+    "    if sentiment_model.coef_.flat[i] >= 0:\n",
+    "        counter += 1\n",
+    "print(counter)"
    ]
   }
  ],
