Classification Primer, point 6,7 done

--- a/Classification Primer/Classification Primer.ipynb
+++ b/Classification Primer/Classification Primer.ipynb
@@ -273,24 +273,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "85472\n"
+      "Number of positive reviews:  85472\n"
      ]
     }
    ],
    "source": [
+    "# 5 c.d. + 6) Prediciting Sentiment\n",
+    "y = []\n",
     "counter = 0\n",
     "arrSize = sentiment_model.coef_.size\n",
     "for i in range(arrSize):\n",
     "    if sentiment_model.coef_.flat[i] >= 0:\n",
     "        counter += 1\n",
-    "print(counter)"
+    "        y.append(+1)\n",
+    "    else:\n",
+    "        y.append(-1)\n",
+    "print(\"Number of positive reviews: \", counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 ..., 1 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = sentiment_model.predict(train_matrix)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7) Probability Predictions\n",
+    "P = []\n",
+    "arrSize = sentiment_model.coef_.size\n",
+    "for i in range(arrSize):\n",
+    "    P.append(1 / (1 + np.exp(-sentiment_model.coef_.flat[i])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 8) "
    ]
   }
  ],
