Classification Primer, bullets 11 and 12

--- a/Classification Primer/Classification Primer.ipynb
+++ b/Classification Primer/Classification Primer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 100,
    "metadata": {
     "collapsed": true
    },
@@ -648,14 +648,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#4) Build the word count vector for each review\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "vectorizer = CountVectorizer(token_pattern = r'\\b\\w+\\b')\n",
     "train_matrix = vectorizer.fit_transform(train_data['review_clean'])\n",
     "test_matrix = vectorizer.fit_transform(test_data['review_clean'])"
@@ -663,14 +662,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#5) Train a sentiment classifier with logistic regression\n",
-    "from sklearn.linear_model import LogisticRegression\n",
     "logisticRegression = LogisticRegression()\n",
     "sentiment_model = logisticRegression.fit(train_matrix, y=train_data[\"sentiment\"])"
    ]
@@ -727,61 +725,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'mean'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-92bd90f16939>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrSize\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mP\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0msentiment_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflat\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mP\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'mean'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# 7) Probability Predictions\n",
-    "P = []\n",
-    "arrSize = sentiment_model.coef_.size\n",
-    "for i in range(arrSize):\n",
-    "    P.append(1 / (1 + np.exp(-sentiment_model.coef_.flat[i])))\n",
-    "P.mean()"
+    "# P = []\n",
+    "# arrSize = sentiment_model.coef_.size\n",
+    "# for i in range(arrSize):\n",
+    "#     P.append(1 / (1 + np.exp(-sentiment_model.coef_[0])))\n",
+    "# P.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Length of values does not match length of index",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-20-b8a94ffc7f4f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 8) Find the most positive (and negative) review\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mtest_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"probability\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msentiment_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_matrix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mtop_20\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtopk\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"probability\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\miniconda3\\envs\\datascience\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   2329\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2330\u001b[0m             \u001b[1;31m# set column\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2331\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2332\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2333\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_setitem_slice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\miniconda3\\envs\\datascience\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_set_item\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m   2395\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2396\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ensure_valid_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2397\u001b[1;33m         \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_sanitize_column\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2398\u001b[0m         \u001b[0mNDFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2399\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\miniconda3\\envs\\datascience\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_sanitize_column\u001b[1;34m(self, key, value, broadcast)\u001b[0m\n\u001b[0;32m   2566\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2567\u001b[0m             \u001b[1;31m# turn me into an ndarray\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2568\u001b[1;33m             \u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_sanitize_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2569\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2570\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\miniconda3\\envs\\datascience\\lib\\site-packages\\pandas\\core\\series.py\u001b[0m in \u001b[0;36m_sanitize_index\u001b[1;34m(data, index, copy)\u001b[0m\n\u001b[0;32m   2877\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2878\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2879\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Length of values does not match length of '\u001b[0m \u001b[1;34m'index'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2880\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2881\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPeriodIndex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Length of values does not match length of index"
-     ]
-    }
-   ],
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# 8) Find the most positive (and negative) review\n",
     "\n",
-    "test_data[\"probability\"] = sentiment_model.predict_proba(train_matrix)\n",
+    "#test_data[\"probability\"] = sentiment_model.predict_proba(train_matrix)\n",
     "\n",
-    "top_20 = test_data.topk(\"probability\", k=20)\n",
-    "top_20.print_rows(20)\n",
+    "#top_20 = test_data.topk(\"probability\", k=20)\n",
+    "#top_20.print_rows(20)\n",
     "\n",
-    "bottom_20 = test_data.topk(\"probability\", k=20, reverse = True)\n",
-    "bottom_20.print_rows(20)"
+    "#bottom_20 = test_data.topk(\"probability\", k=20, reverse = True)\n",
+    "#bottom_20.print_rows(20)"
    ]
   },
   {
@@ -821,12 +795,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
+   "execution_count": 123,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_matrix_word_subset = vectorizer_word_subset.fit_transform(train_data['review_clean'])\n",
-    "test_matrix_word_subset = vectorizer_word_subset.fit_transform(test_data['review_clean'])"
+    "test_matrix_word_subset = vectorizer_word_subset.transform(test_data['review_clean'])"
    ]
   },
   {
@@ -1852,7 +1828,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#vectorizer_word_subset.get_feature_names()"
@@ -1860,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
@@ -1877,43 +1855,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 121620)\n",
-      "1\n"
+      "('travelingwithbaby', 2.4054739777323229)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('animalswell', 1.7950398235172009)"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(simple_model.coef_.shape)\n",
-    "print(len(simple_model.coef_))\n",
     "table = sorted(list(zip(vectorizer_word_subset.vocabulary_,simple_model.coef_[0])), key=lambda x:(-x[1],x[0]), reverse=True)\n",
-    "table[-1]"
+    "print(table[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentiment_model clasiffier on train_data: 0.8411941551771965\n",
+      "Simple_model clasiffier on train_data:\t  0.8411941551771965\n",
+      "Simple_model clasiffier on test_data:\t  0.8408403008780605\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 11) Comparing models\n",
+    "# We will now compare the accuracy of the sentiment_model and the simple_model.\n",
+    "# First, compute the classification accuracy of the sentiment_model on the train_data.\n",
+    "# Now, compute the classification accuracy of the simple_model on the train_data.\n",
+    "# Next, compute the classification accuracy of the simple_model on the test_data.\n",
+    "def get_classification_accuracy(model, data, true_labels, matrix):\n",
+    "    # First get the predictions\n",
+    "    predictions = model.predict(matrix)\n",
+    "    \n",
+    "    # Compute the number of correctly classified examples\n",
+    "    num_correct = 0\n",
+    "    j = 0\n",
+    "    for i in true_labels:\n",
+    "          if predictions[j] == i:\n",
+    "             num_correct = num_correct + 1\n",
+    "\n",
+    "    # Then compute accuracy by dividing num_correct by total number of examples\n",
+    "    accuracy = num_correct / len(data)\n",
+    "    \n",
+    "    return accuracy\n",
+    "\n",
+    "print(\"Sentiment_model clasiffier on train_data:\", get_classification_accuracy(sentiment_model, train_data, train_data['sentiment'], train_matrix))\n",
+    "print(\"Simple_model clasiffier on train_data:\\t \", get_classification_accuracy(simple_model, train_data, train_data['sentiment'], train_matrix_word_subset))\n",
+    "print(\"Simple_model clasiffier on test_data:\\t \", get_classification_accuracy(simple_model, test_data, test_data['sentiment'], test_matrix_word_subset))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Majority clasiffier for train_data accuracy:  0.841194155177\n",
+      "Majority clasiffier for test_data accuracy:  0.840840300878\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 12 Baseline: Majority class prediction\n",
+    "# It is quite common to use the majority class classifier as the a baseline (or reference) model\n",
+    "# for comparison with your classifier model. The majority classifier model predicts the majority\n",
+    "# class for all data points. At the very least, you should healthily beat the majority class\n",
+    "# classifier, otherwise, the model is (usually) pointless.\n",
+    "\n",
+    "train_num_positive  = (train_data['sentiment'] == +1).sum()\n",
+    "print(\"Majority clasiffier for train_data accuracy: \", num_positive/len(train_data))\n",
+    "\n",
+    "test_num_positive  = (test_data['sentiment'] == +1).sum()\n",
+    "print(\"Majority clasiffier for test_data accuracy: \", test_num_positive/len(test_data))"
+   ]
   }
  ],
  "metadata": {
