--- a/Classification Advanced - Decision Tree/module-5-decision-tree-assignment-1-blank.ipynb
+++ b/Classification Advanced - Decision Tree/module-5-decision-tree-assignment-1-blank.ipynb
@@ -96,7 +96,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wojci\\AppData\\Local\\Temp\\graphlab_server_1516895282.log.0\n"
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wojci\\AppData\\Local\\Temp\\graphlab_server_1517128986.log.0\n"
      ]
     }
    ],
@@ -118,7 +118,8 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -214,7 +215,8 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -278,7 +280,8 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -409,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -510,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -554,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -612,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -684,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -709,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -825,10 +828,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>| 1         | 0.037025     | 0.640581          | 0.663259          |</pre>"
+       "<pre>| 1         | 0.044028     | 0.640581          | 0.663259          |</pre>"
       ],
       "text/plain": [
-       "| 1         | 0.037025     | 0.640581          | 0.663259          |"
+       "| 1         | 0.044028     | 0.640581          | 0.663259          |"
       ]
      },
      "metadata": {},
@@ -924,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -1040,10 +1043,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>| 1         | 0.021519     | 0.613502          | 0.676098          |</pre>"
+       "<pre>| 1         | 0.046031     | 0.613502          | 0.676098          |</pre>"
       ],
       "text/plain": [
-       "| 1         | 0.021519     | 0.613502          | 0.676098          |"
+       "| 1         | 0.046031     | 0.613502          | 0.676098          |"
       ]
      },
      "metadata": {},
@@ -1149,7 +1152,8 @@
    "cell_type": "code",
    "execution_count": 123,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1794,11 +1798,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.613502041694\n",
+      "0.640581345369\n"
+     ]
+    }
+   ],
    "source": [
     "print small_model.evaluate(train_data)['accuracy']\n",
     "print decision_tree_model.evaluate(train_data)['accuracy']"
@@ -1816,12 +1829,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'accuracy': 0.5597070314092997}\n",
+      "{'accuracy': 0.6391723147944245}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print small_model.evaluate(loans, metric='accuracy')\n",
+    "print decision_tree_model.evaluate(loans, metric='accuracy')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1830,6 +1855,25 @@
    },
    "source": [
     "**Quiz Question:** What is the accuracy of `decision_tree_model` on the validation set, rounded to the nearest .01?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print round(decision_tree_model.evaluate(validation_data)['accuracy'], 2)"
    ]
   },
   {
@@ -1843,11 +1887,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>Decision tree classifier:</pre>"
+      ],
+      "text/plain": [
+       "Decision tree classifier:"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of examples          : 37224</pre>"
+      ],
+      "text/plain": [
+       "Number of examples          : 37224"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of classes           : 2</pre>"
+      ],
+      "text/plain": [
+       "Number of classes           : 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of feature columns   : 12</pre>"
+      ],
+      "text/plain": [
+       "Number of feature columns   : 12"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of unpacked features : 12</pre>"
+      ],
+      "text/plain": [
+       "Number of unpacked features : 12"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+--------------+-------------------+-------------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+--------------+-------------------+-------------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Iteration | Elapsed Time | Training-accuracy | Training-log_loss |</pre>"
+      ],
+      "text/plain": [
+       "| Iteration | Elapsed Time | Training-accuracy | Training-log_loss |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+--------------+-------------------+-------------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+--------------+-------------------+-------------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1         | 0.149097     | 0.665538          | 0.652730          |</pre>"
+      ],
+      "text/plain": [
+       "| 1         | 0.149097     | 0.665538          | 0.652730          |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+--------------+-------------------+-------------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+--------------+-------------------+-------------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "big_model = graphlab.decision_tree_classifier.create(train_data, validation_set=None,\n",
     "                   target = target, features = features, max_depth = 10)"
@@ -1862,11 +2040,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.665538362347\n",
+      "0.627423524343\n"
+     ]
+    }
+   ],
    "source": [
     "print big_model.evaluate(train_data)['accuracy']\n",
     "print big_model.evaluate(validation_data)['accuracy']"
@@ -1883,7 +2070,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Quiz Question:** How does the performance of **big_model** on the validation set compare to **decision_tree_model** on the validation set? Is this a sign of overfitting?"
+    "**Quiz Question:** How does the performance of **big_model** on the validation set compare to **decision_tree_model** on the validation set? Is this a sign of overfitting?\n",
+    "\n",
+    "**big_model** (validation_data) = 0.626\n",
+    "**decision_tree_model** (validation_data) = 0.637\n",
+    "\n",
+    "zrobić wykres "
    ]
   },
   {
